Library/AXL(Library)/Dynamic Link/DAXA.h

typedef DWORD    PASCAL EXPORT funcAxaiGetRangeModule(long lModuleNo, double *dMinVolt, double *dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetTriggerMode(long lModuleNo, DWORD uTriggerMode);
typedef DWORD    PASCAL EXPORT funcAxaiGetTriggerMode(long lModuleNo, DWORD *upTriggerMode);
typedef DWORD    PASCAL EXPORT funcAxaiSetModuleOffsetValue(long lModuleNo, double dMiliVolt);
 
typedef DWORD    PASCAL EXPORT funcAxaiGetModuleOffsetValue(long lModuleNo, double *dpMiliVolt);
 
typedef DWORD    PASCAL EXPORT funcAxaiSwReadVoltage(long lChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadDigit(long lChannelNo, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSwReadMultiDigit(long lSize, long *lpChannelNo, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiAccess(long lSize, long *lpChannelNo, long *lpWordSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiAccess(double *dpBuffer);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetSampleFreq(long lModuleNo, double dSampleFreq);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetSampleFreq(long lModuleNo, double *dpSampleFreq);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetSamplePeriod(long lModuleNo, double dSamplePeriod);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetSamplePeriod(long lModuleNo, double *dpSamplePeriod);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetBufferOverflowMode(long lChannelNo, DWORD uFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetBufferOverflowMode(long lChannelNo, DWORD *upFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiBufferOverflowMode(long lSize, long *lpChannelNo, DWORD uFullMode);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetLimit(long lChannelNo, long lLowLimit, long lUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwGetLimit(long lChannelNo, long *lpLowLimit, long *lpUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwSetMultiLimit(long lSize, long *lpChannelNo, long lLowLimit, long lUpLimit);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiChannel(long lSize, long *lpChannelNo, long lBuffSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartSingleChannelAdc(long lChannelNo, long lBuffSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStopSingleChannelAdc(long lChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiFilter(long lSize, long *lpChannelNo, long lFilterCount, long lBuffSize);
typedef DWORD    PASCAL EXPORT funcAxaiHwStopMultiChannel(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadDataLength(long lChannelNo, long *lpDataLength);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadSampleVoltage(long lChannelNo, long *lpSize, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaiHwReadSampleDigit(long lChannelNo, long *lpsize, DWORD *upDigit);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferEmpty(long lChannelNo, DWORD *upEmpty);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferUpper(long lChannelNo, DWORD *upUpper);
typedef DWORD    PASCAL EXPORT funcAxaiHwIsBufferLower(long lChannelNo, DWORD *upLower);
extern funcAxaiGetRangeModule                   *AxaiGetRangeModule;
extern funcAxaiSetMultiRange                    *AxaiSetMultiRange;
extern funcAxaiSetTriggerMode                   *AxaiSetTriggerMode;
extern funcAxaiGetTriggerMode                   *AxaiGetTriggerMode;
extern funcAxaiSetModuleOffsetValue             *AxaiSetModuleOffsetValue;
extern funcAxaiGetModuleOffsetValue             *AxaiGetModuleOffsetValue;
extern funcAxaiSwReadVoltage                    *AxaiSwReadVoltage;
extern funcAxaiSwReadDigit                      *AxaiSwReadDigit;
extern funcAxaiSwReadMultiVoltage               *AxaiSwReadMultiVoltage;
extern funcAxaiSwReadMultiDigit                 *AxaiSwReadMultiDigit;
extern funcAxaiHwSetMultiAccess                 *AxaiHwSetMultiAccess;
extern funcAxaiHwStartMultiAccess               *AxaiHwStartMultiAccess;
extern funcAxaiHwSetSampleFreq                  *AxaiHwSetSampleFreq;
extern funcAxaiHwGetSampleFreq                  *AxaiHwGetSampleFreq;
extern funcAxaiHwSetSamplePeriod                *AxaiHwSetSamplePeriod;
extern funcAxaiHwGetSamplePeriod                *AxaiHwGetSamplePeriod;
extern funcAxaiHwSetBufferOverflowMode          *AxaiHwSetBufferOverflowMode;
extern funcAxaiHwGetBufferOverflowMode          *AxaiHwGetBufferOverflowMode;
extern funcAxaiHwSetMultiBufferOverflowMode     *AxaiHwSetMultiBufferOverflowMode;
extern funcAxaiHwSetLimit                       *AxaiHwSetLimit;
extern funcAxaiHwGetLimit                       *AxaiHwGetLimit;
extern funcAxaiHwSetMultiLimit                  *AxaiHwSetMultiLimit;
extern funcAxaiHwStartMultiChannel              *AxaiHwStartMultiChannel;
extern funcAxaiHwStartSingleChannelAdc          *AxaiHwStartSingleChannelAdc;
extern funcAxaiHwStopSingleChannelAdc           *AxaiHwStopSingleChannelAdc;
extern funcAxaiHwStartMultiFilter               *AxaiHwStartMultiFilter;
extern funcAxaiHwStopMultiChannel               *AxaiHwStopMultiChannel;
extern funcAxaiHwReadDataLength                 *AxaiHwReadDataLength;
extern funcAxaiHwReadSampleVoltage              *AxaiHwReadSampleVoltage;
extern funcAxaiHwReadSampleDigit                *AxaiHwReadSampleDigit;
extern funcAxaiHwIsBufferEmpty                  *AxaiHwIsBufferEmpty;
extern funcAxaiHwIsBufferUpper                  *AxaiHwIsBufferUpper;
extern funcAxaiHwIsBufferLower                  *AxaiHwIsBufferLower;