Library/AXL(Library)/C#/AXA.cs


//Verify the input voltage range in specified input Module
//==================================================================================================//
// lModuleNo   : Analog Module Number
//
// RTEX AI16F
// *dMinVolt   : -5V, -10V
// *dMaxVolt   : +5V, +10V
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiGetRangeModule(int lModuleNo, ref double dMinVolt, ref double dMaxVolt);



//Set the allowed input voltage range in specified multiple input channels
//==================================================================================================//
// AXT_SIO_RAI8RB
// dMinVolt   : -10V Fix
// dMaxVolt   : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiSetMultiRange(int lSize, int[] lpChannelNo, double dMinVolt, double dMaxVolt);


//Set trigger mode in the specified input module
//==================================================================================================//
// uTriggerMode : NORMAL_MODE(1)
//              : TIMER_MODE(2)
//              : EXTERNAL_MODE(3)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiSetTriggerMode(int lModuleNo, uint uTriggerMode);


//Verify trigger mode in the specified input module
//==================================================================================================//
// *upTriggerMode : NORMAL_MODE(1)
//                : TIMER_MODE(2)
//                : EXTERNAL_MODE(3)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiGetTriggerMode(int lModuleNo, ref uint upTriggerMode);


//Set offset of specified input module by mVolt (mV) unit. Max -100~100mVolt
//==================================================================================================//
// dMiliVolt    : -100 ~ 100
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiSetModuleOffsetValue(int lModuleNo, double dMiliVolt);


//Verify offset value of specified input module. mVolt unit(mV)
//==================================================================================================//
// *dpMiliVolt    : -100 ~ 100
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiGetModuleOffsetValue(int lModuleNo, ref double dpMiliVolt);


//========== Software Timer (Normal Trigger Mode) group ===================================================================================
//Software Trigger Mode API, Convert analog input value to A/D in the specified input channel by user , then return it in voltage value
[DllImport("AXL.dll")] public static extern uint AxaiSwReadVoltage(int lChannelNo, ref double dpVolt);


//Software Trigger Mode API, Return analog input value in digit value to specified input channel
[DllImport("AXL.dll")] public static extern uint AxaiSwReadDigit(int lChannelNo, ref uint upDigit);


//Software Trigger Mode API, Return analog input value in voltage value to specified multiple input channels
[DllImport("AXL.dll")] public static extern uint AxaiSwReadMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);


//Software Trigger Mode API, Return analog input value in digit value to specified multiple input channels
[DllImport("AXL.dll")] public static extern uint AxaiSwReadMultiDigit(int lSize, int[] lpChannelNo, uint[] upDigit);


//========== Hardware Timer (Timer Trigger Mode + External Trigger Mode) group ===================================================================================
//Hardware Trigger Mode API, Set setting value in order to use immediate mode in specified multiple channels
[DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiAccess(int lSize, int[] lpChannelNo, int[] lpWordSize);


//Hardware Trigger Mode API, Convert A/D as much as number of specified, then return the voltage value
[DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiAccess(double[,] dpBuffer);


//Set sampling interval to specified module by frequency unit(Hz)
//==================================================================================================//
// dSampleFreq    : 10 ~ 100000
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwSetSampleFreq(int lModuleNo, double dSampleFreq);


//Verify the setting value of sampling interval to specified module by frequency unit(Hz)
//==================================================================================================//
// *dpSampleFreq  : 10 ~ 100000
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwGetSampleFreq(int lModuleNo, ref double dpSampleFreq);


//Set sampling interval to specified module by time unit (uSec)
//==================================================================================================//
// dSamplePeriod  : 100000 ~ 1000000000
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwSetSamplePeriod(int lModuleNo, double dSamplePeriod);


//Verify setting value of sampling interval to specified module by time unit(uSec)
//==================================================================================================//
// *dpSamplePeriod: 100000 ~ 1000000000
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwGetSamplePeriod(int lModuleNo, ref double dpSamplePeriod);


//Set control method when the buffer is full in specified input channel
//==================================================================================================//
// uFullMode    : NEW_DATA_KEEP(0)
//              : CURR_DATA_KEEP(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwSetBufferOverflowMode(int lChannelNo, uint uFullMode);


//Verify control method when the buffer is full in specified input channel
//==================================================================================================//
// *upFullMode  : NEW_DATA_KEEP(0)
//              : CURR_DATA_KEEP(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwGetBufferOverflowMode(int lChannelNo, ref uint upFullMode);


//control method when the buffer is full in specified multiple input channels
//==================================================================================================//
// uFullMode    : NEW_DATA_KEEP(0)
//              : CURR_DATA_KEEP(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiBufferOverflowMode(int lSize, int[] lpChannelNo, uint uFullMode);


//Set the upper limit and lower limit of buffer in specified input channel
[DllImport("AXL.dll")] public static extern uint AxaiHwSetLimit(int lChannelNo, int lLowLimit, int lUpLimit);


//Verify the upper limit and lower limit of buffer in specified input channel
[DllImport("AXL.dll")] public static extern uint AxaiHwGetLimit(int lChannelNo, ref int lpLowLimit, ref int lpUpLimit);


//Set the upper limit and lower limit of buffer in multiple input channels
[DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiLimit(int lSize, int[] lpChannelNo, int lLowLimit, int lUpLimit);


//Start A/D conversion using H/W timer in specified multiple channels
[DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiChannel(int lSize, int[] lpChannelNo, int lBuffSize);


//Start A/D conversion using H/W timer in specified single channels
[DllImport("AXL.dll")] public static extern uint AxaiHwStartSingleChannelAdc(int lChannelNo, int lBuffSize);


//Stop continuous signal A/D conversion used H/W timer.
[DllImport("AXL.dll")] public static extern uint AxaiHwStopSingleChannelAdc(int lChannelNo);


//After starting of A/D conversion in specified multiple channels, manage filtering as much as specified and return into voltage
//==================================================================================================//
// lSize           : Number of input channels to use
// *lpChannelNo    : An array of channel numbers to use
// lFilterCount    : Number of data for filtering
// lBuffSize       : Number of buffers which are assigned to each channel
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiFilter(int lSize, int[] lpChannelNo, int lFilterCount, int lBuffSize);


//Stop continuous signal A/D conversion used H/W timer
[DllImport("AXL.dll")] public static extern uint AxaiHwStopMultiChannel(int lModuleNo);


//Inspect the numbers of data in memory buffer of specified input channel
[DllImport("AXL.dll")] public static extern uint AxaiHwReadDataLength(int lChannelNo, ref int lpDataLength);


//Read A/D conversion data used H/W timer in specified input channel by voltage value
[DllImport("AXL.dll")] public static extern uint AxaiHwReadSampleVoltage(int lChannelNo, ref int lpSize, ref double dpVolt);


//Read A/D conversion data used H/W timer in specified input channel by digit value
[DllImport("AXL.dll")] public static extern uint AxaiHwReadSampleDigit(int lChannelNo, ref int lpSize, ref uint upDigit);


//========== API group of input module state check ===================================================================================
//Inspect if there is no data in memory buffer of specified input channel
//==================================================================================================//
// *upEmpty   : FALSE(0)
//            : TRUE(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferEmpty(int lChannelNo, ref uint upEmpty);


//Inspect if the data is more than the upper limit specified in memory buffer of specified input channel
//==================================================================================================//
// *upUpper   : FALSE(0)
//            : TRUE(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferUpper(int lChannelNo, ref uint upUpper);


//Inspect if the data is less than the upper limit specified in memory buffer of specified input channel
//==================================================================================================//
// *upLower   : FALSE(0)
//            : TRUE(1)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferLower(int lChannelNo, ref uint upLower);

